--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Please restart the server process, after having changed this file.
 
 # Site settings
-title: 
+title: Ozilia
 author: Steven Lee
 email: 121059464@qq.com
 description: >- # this means to ignore newlines until "url:"
