--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@
 # Please restart the server process, after having changed this file.
 
 # Site settings
-title: Ozilia
+title: 
 author: Steven Lee
 email: 121059464@qq.com
 description: >- # this means to ignore newlines until "url:"
-url: "https://zodiacaca.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://even-steel.me" # the base hostname & protocol for your site, e.g. http://example.com
 subpath: "" # the subpath of your site, e.g. /blog/
 permalink: /:categories/:title:output_ext
 twitter_username: 
@@ -32,6 +32,5 @@ exclude:
   - vendor/gems/
   - vendor/ruby/
   - start.bat
-  - build.bat
   
   - feed.xml
