--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@
 # Please restart the server process, after having changed this file.
 
 # Site settings
-title: 
+title:
 author: Steven Lee
 email: 121059464@qq.com
 description: >- # this means to ignore newlines until "url:"
 url: "https://even-steel.me" # the base hostname & protocol for your site, e.g. http://example.com
 subpath: "" # the subpath of your site, e.g. /blog/
 permalink: /:categories/:title:output_ext
-twitter_username: 
+twitter_username:
 github_username: zodiacaca
 
 # Build settings
@@ -31,6 +31,6 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
-  - start.bat
-  
+  - server.ps1
+
   - feed.xml
